[gd_scene load_steps=6 format=3 uid="uid://bd0t8uq0xv6wr"]

[ext_resource type="Script" path="res://src/scripts/pages/tabletop_manager.gd" id="1_ut1p2"]
[ext_resource type="PackedScene" uid="uid://3uwharyjlmsp" path="res://src/scenes/ui/right_click_menu.tscn" id="3_p6n1r"]
[ext_resource type="PackedScene" uid="uid://lpw6t5xb1d5i" path="res://src/scenes/dialogs/dialogs.tscn" id="4_amt3m"]
[ext_resource type="PackedScene" uid="uid://ma7a666pl2us" path="res://src/scenes/ui/user_interface.tscn" id="5_fbvm5"]
[ext_resource type="PackedScene" uid="uid://uing22je8p0x" path="res://src/scenes/game_elements/camera_controller.tscn" id="6_i4563"]

[node name="TabletopManager" type="Node"]
script = ExtResource("1_ut1p2")

[node name="UserInterfaceLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="RightClickMenu" parent="UserInterfaceLayer" instance=ExtResource("3_p6n1r")]

[node name="Dialogs" parent="UserInterfaceLayer" instance=ExtResource("4_amt3m")]

[node name="UserInterface" parent="UserInterfaceLayer" instance=ExtResource("5_fbvm5")]

[node name="CameraController" parent="." instance=ExtResource("6_i4563")]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://src/scenes/game_elements/tabletop.tscn")
spawn_path = NodePath("..")
